--- a/style.css
+++ b/style.css
@@ -2,4 +2,99 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
+
+/*navbar*/
+
+nav{
+    background-image: linear-gradient(#023e8a,#0096c7);
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.Navbar ul li{
+    display: inline-block;
+    
+}
+
+.Navbar ul li a{
+    text-decoration: none;
+    color: #f8f9fa;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 0px 10px;
+    transition: all .3s ease;
+}
+.Logo a{
+    text-decoration: none;
+    color: #f8f9fa;
+    font-weight: 700;
+    font-size: 20px;
+    margin: 0px 10px;
+    cursor: pointer;
+    
+}
+
+.Navbar ul li a:hover{
+    background-color: #495057;
+    padding: 5px 10px;
+    
+}
+
+/*body sec-1*/
+.home{
+    display: flex;
+    margin: 10px 0px 10px 0px;
+    background-image: url(./images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.half-width{
+    width: 50%;
+    
+}
+.half-width img{
+    width: 80%;
+    padding-top: 5%;
+}
+
+.content{
+    padding-top: 10%;
+    padding-left: 5%;
+}
+
+.content h1{
+    color: #023e8a;
+    font-size: 55px;
+    margin: 10px 0px;
+}
+.content h3{
+    color: #0077b6;
+    font-size: 35px;
+    margin: 10px 0px;
+}
+.content h4{
+    color: #0077b6;
+    font-size: 25px;
+    margin: 10px 0px;
+}
+span{
+    color: #f72585;
+}
+.button{
+    text-decoration: none;
+    color: #f8f9fa;
+    font-weight: 700;
+    font-size: 20px;
+    background-image: linear-gradient(#f72585,#b5179e);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+/*body sec-2*/
+
+
